Se quitaron redirecciones

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -75,13 +75,12 @@
         <li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
             <i class="ni ni-collection d-lg-none"></i>
-            <span class="nav-link-inner--text">Examples</span>
+            <span class="nav-link-inner--text">Ejemplos de vista de usuario
+            </span>
           </a>
           <div class="dropdown-menu">
-            <a [routerLink]="['/landing']" class="dropdown-item">Landing</a>
+            <a [routerLink]="['/landing']" class="dropdown-item">Otra vista</a>
             <a [routerLink]="['/user-profile']" class="dropdown-item">Perfil</a>
-            <a [routerLink]="['/login']" class="dropdown-item">Crear Cuenta</a>
-            <a [routerLink]="['/register']" class="dropdown-item">Registrarse</a>
           </div>
         </li>
       </ul>
