Se modifico nombre de componente landing

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -79,7 +79,7 @@
             </span>
           </a>
           <div class="dropdown-menu">
-            <a [routerLink]="['/landing']" class="dropdown-item">Otra vista</a>
+            <a [routerLink]="['/statistics']" class="dropdown-item">Otra vista</a>
             <a [routerLink]="['/user-profile']" class="dropdown-item">Perfil</a>
           </div>
         </li>
