--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,141 +1,123 @@
 <main class="profile-page">
-    <section class="section section-lg section-hero section-shaped">
-      <!-- Circles background -->
-      <div class="shape shape-style-1 shape-primary alpha-4">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <!-- SVG separator -->
-      <div class="separator separator-bottom separator-skew">
-        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-          <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-        </svg>
-      </div>
-      <div class="container">
-        <div class="px-4">
-          <div class="main-content">
-            <div class="row">
-              <div class="col-md-8">
-                <div class="card">
-                  <div class="card-header">
-                    <h5 class="title">Edit Profile</h5>
-                  </div>
-                  <div class="card-body">
-                    <form>
-                      <div class="row">
-                        <div class="col-md-5 pr-1">
-                          <div class="form-group">
-                            <label>Company (disabled)</label>
-                            <input type="text" class="form-control" disabled="" placeholder="Company" value="Creative Code Inc.">
-                          </div>
-                        </div>
-                        <div class="col-md-3 px-1">
-                          <div class="form-group">
-                            <label>Username</label>
-                            <input type="text" class="form-control" placeholder="Username" value="michael23">
-                          </div>
-                        </div>
-                        <div class="col-md-4 pl-1">
-                          <div class="form-group">
-                            <label for="email">Email address</label>
-                            <input name="email" id="email" type="email" class="form-control" placeholder="Email">
-                          </div>
+  <section class="section section-lg section-hero section-shaped">
+    <!-- Circles background -->
+    <div class="shape shape-style-1 shape-primary alpha-4">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <!-- SVG separator -->
+    <div class="separator separator-bottom separator-skew">
+      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+      </svg>
+    </div>
+    <div class="container">
+      <div class="px-4">
+        <div class="main-content">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="title">Editar Perfil</h5>
+                </div>
+                <div class="card-body">
+                  <form>
+                    <div class="row">
+                      <div class="col-md-6 pr-1">
+                        <div class="form-group">
+                          <label>Email</label>
+                          <input name="email" id="email" type="email" disabled="" class="form-control" placeholder="pepito@gmail.com">
                         </div>
                       </div>
-                      <div class="row">
-                        <div class="col-md-6 pr-1">
-                          <div class="form-group">
-                            <label>First Name</label>
-                            <input type="text" class="form-control" placeholder="Company" value="Mike">
-                          </div>
-                        </div>
-                        <div class="col-md-6 pl-1">
-                          <div class="form-group">
-                            <label>Last Name</label>
-                            <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
-                          </div>
+                      <div class="col-md-6 px-1">
+                        <div class="form-group">
+                          <label>Nombre de Usuario:</label>
+                          <input type="text" class="form-control" placeholder="Username" value="pepito123">
                         </div>
                       </div>
-                      <div class="row">
-                        <div class="col-md-12">
-                          <div class="form-group">
-                            <label>Address</label>
-                            <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
-                          </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6 pr-1">
+                        <div class="form-group">
+                          <label>Nombre:</label>
+                          <input type="text" class="form-control" placeholder="Company" value="Mike">
                         </div>
                       </div>
-                      <div class="row">
-                        <div class="col-md-4 pr-1">
-                          <div class="form-group">
-                            <label>City</label>
-                            <input type="text" class="form-control" placeholder="City" value="Mike">
-                          </div>
-                        </div>
-                        <div class="col-md-4 px-1">
-                          <div class="form-group">
-                            <label>Country</label>
-                            <input type="text" class="form-control" placeholder="Country" value="Andrew">
-                          </div>
-                        </div>
-                        <div class="col-md-4 pl-1">
-                          <div class="form-group">
-                            <label>Postal Code</label>
-                            <input type="number" class="form-control" placeholder="ZIP Code">
-                          </div>
+                      <div class="col-md-6 pl-1">
+                        <div class="form-group">
+                          <label>Apellido:</label>
+                          <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
                         </div>
                       </div>
-                      <div class="row">
-                        <div class="col-md-12">
-                          <div class="form-group">
-                            <label>About Me</label>
-                            <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
-                          </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="form-group">
+                          <label>Address</label>
+                          <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
                         </div>
                       </div>
-                    </form>
-                  </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-4 pr-1">
+                        <div class="form-group">
+                          <label>City</label>
+                          <input type="text" class="form-control" placeholder="City" value="Mike">
+                        </div>
+                      </div>
+                      <div class="col-md-4 px-1">
+                        <div class="form-group">
+                          <label>Country</label>
+                          <input type="text" class="form-control" placeholder="Country" value="Andrew">
+                        </div>
+                      </div>
+                      <div class="col-md-4 pl-1">
+                        <div class="form-group">
+                          <label>Postal Code</label>
+                          <input type="number" class="form-control" placeholder="ZIP Code">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="form-group">
+                          <label>About Me</label>
+                          <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
                 </div>
               </div>
-              <div class="col-md-4">
-                <div class="card card-user">
-                  <div class="card-body">
-                    <div class="author">
-                      <a href="#">
-                        <img class="avatar border-gray" src="../assets/img/mike.jpg" alt="...">
-                        <h5 class="title">Mike Andrew</h5>
-                      </a>
-                      <p class="description">
-                        michael24
-                      </p>
-                    </div>
-                    <p class="description text-center">
-                      "Lamborghini Mercy
-                      <br> Your chick she so thirsty
-                      <br> I'm in that two seat Lambo"
+            </div>
+            <div class="col-md-4">
+              <div class="card card-user">
+                <div class="card-body">
+                  <div class="author">
+                    <a href="#">
+                      <img class="avatar border-gray" src="../assets/img/mike.jpg" alt="...">
+                      <h5 class="title">Mike Andrew</h5>
+                    </a>
+                    <p class="description">
+                      michael24
                     </p>
                   </div>
-                  <hr>
-                  <div class="button-container">
-                    <button href="#" class="btn btn-neutral btn-icon btn-round btn-lg">
-                      <i class="fab fa-facebook-f"></i>
-                    </button>
-                    <button href="#" class="btn btn-neutral btn-icon btn-round btn-lg">
-                      <i class="fab fa-twitter"></i>
-                    </button>
-                    <button href="#" class="btn btn-neutral btn-icon btn-round btn-lg">
-                      <i class="fab fa-google-plus-g"></i>
-                    </button>
-                  </div>
+                  <p class="description text-center">
+                    "Lamborghini Mercy
+                    <br> Your chick she so thirsty
+                    <br> I'm in that two seat Lambo"
+                  </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </div>
   </section>
 </main>
