--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -17,7 +17,7 @@
             </span>
           </a>
           <div class="dropdown-menu">
-            <a [routerLink]="['/statistics']" class="dropdown-item">Rutinas</a>
+            <a [routerLink]="['/routine']" class="dropdown-item">Rutinas</a>
             <a [routerLink]="['/user-profile']" class="dropdown-item">Perfil</a>
             <a [routerLink]="['/calendar']" class="dropdown-item">Calendario</a>
           </div>
