Se agrego muevo service y vista y se modificaron actuales

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,6 +18,7 @@
           </a>
           <div class="dropdown-menu">
             <a [routerLink]="['/routine']" class="dropdown-item">Rutinas</a>
+            <a [routerLink]="['/routineGenerated']" class="dropdown-item">Generar mi Rutina</a>
             <a [routerLink]="['/user-profile']" class="dropdown-item">Perfil</a>
             <a [routerLink]="['/calendar']" class="dropdown-item">Calendario</a>
           </div>
