--- a/src/app/routine/routine.component.html
+++ b/src/app/routine/routine.component.html
@@ -2,7 +2,7 @@
   <div class="position-relative">
     <!-- shape Hero -->
     <section class="section section-lg section-shaped pb-250">
-      <div class="shape shape-style-1 shape-default">
+      <div class="shape shape-style-1 shape-primary">
         <span></span>
         <span></span>
         <span></span>
@@ -68,25 +68,40 @@
       </div>
     </div>
   </section>
-  <ul class="code-editor-options-menu" *ngFor="let rou of routinesForLevel">
-    <div class="col-lg-4">
-      <div class="card card-lift--hover shadow border-0">
-        <div class="card-body py-5">
-          <td>{{routine.nameRoutine}}
-          <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
-            <li>
-              <span>Ejercicio: {{dat.processExercise.nameExercise}}</span> <br> 
-              <span>Repeticiones: {{dat.repetitions}}</span> <br>
-              <span>Nivel: {{dat.levelExcercise}}</span> <br>
-              <span>Duracion: {{dat.exerciseTimes}} minutos</span> <br>
-              <span>Descanso entre series: {{dat.breakTime}} minutos</span> <br>
-              <span>Descripcion: {{dat.processExercise.description}}</span> <br>
-              <span>video: {{dat.processExercise.urlVideo}}</span> <br>
-              <span>Musculo Prinsipal: {{dat.processExercise.mainMuscle}}</span> <br>
-            </li><br>
-          </ul>
+  <section class="wrapper">
+    <ul class="code-editor-options-menu" *ngFor="let rou of routinesForLevel">
+      <div class="content">
+        <div class="container container rounded">
+          <div class="section section-cp section-shaped">
+            <div class="shape shape-default container rounded"></div>
+            <p style=" color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder; text-transform:uppercase;">
+              {{rou.nameRoutine}}
+            </p>
+            <div class="row row-grid justify-content-center">
+              <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
+                <div class="card text-black bg-dark font-weight-bold mb-2" style="max-width: 12rem;">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-header justify-content-center" style="text-transform:uppercase; height:5rem; text-align: center;">
+                        {{dat.processExercise.nameExercise}}
+                      </div>
+                      <p>
+                        * {{dat.repetitions}} series <br>
+                        * {{dat.repetitions}} repeticiones <br>
+                      </p>
+                    </div>
+                    <div class="card-read-more">
+                      <a href="javascript:void(0)" class="btn btn-link btn-block">
+                        Más Información
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </ul>
+    </ul>
+  </section>
 </main>
