Se agrego seccion my routine y service nueva routine

--- a/src/app/routine-generated/routine-generated.component.html
+++ b/src/app/routine-generated/routine-generated.component.html
@@ -1,47 +1,63 @@
 <main>
-    <div class="position-relative">
-      <!-- shape Hero -->
-      <section class="section section-lg section-shaped pb-250">
-        <div class="shape shape-style-1 shape-primary">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <!-- SVG separator -->
-        <div class="separator separator-bottom separator-skew">
-          <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-            <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-          </svg>
-        </div>
-        <div class="row row-grid justify-content-center">
-          <ul class="code-editor-options-menu" *ngFor="let dat of allExercise">
-            <div class="card text-black bg-dark font-weight-bold mb-2" style="max-width: 12rem;">
-              <div class="card">
-                <div class="card-content">
-                  <div class="card-header justify-content-center" style="text-transform:uppercase; height:5rem; text-align: center;">
-                    {{dat.processExercise.nameExercise}}
-                  </div>
-                  <p>
-                    * {{dat.repetitions}} series <br>
-                    * {{dat.repetitions}} repeticiones <br>
-                  </p>
+  <div class="position-relative">
+    <!-- shape Hero -->
+    <section class="section section-lg section-shaped pb-250">
+      <div class="shape shape-style-1 shape-primary">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="col-sm-9">
+        <h2 class="display-3 mb-0"  style="color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
+          Elige ejercicios y crea tu rutina personalizada:
+        </h2>
+      </div><br>
+      <!-- SVG separator -->
+      <div class="separator separator-bottom separator-skew">
+        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+          <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+        </svg>
+      </div>
+      <div class="row row-grid justify-content-center">
+        <ul class="code-editor-options-menu" *ngFor="let dat of allExercise">
+          <div class="card text-black bg-dark font-weight-bold mb-2" style="max-width: 12rem;">
+            <div class="card">
+              <div class="card-content">
+                <div class="card-header justify-content-center" style="text-transform:uppercase; height:5rem; text-align: center;">
+                  {{dat.processExercise.nameExercise}}
                 </div>
-                <div class="card-read-more">
-                  <a href="javascript:void(0)" class="btn btn-link btn-block">
-                    Agregar a Rutina
-                  </a>
-                </div>
+                <p>
+                  * {{dat.series}} series <br>
+                  * {{dat.repetitions}} repeticiones <br>
+                </p>
+              </div>
+              <div class="card-read-more" *ngIf="isSelected(dat)" >
+                <a href="javascript:void(0)" (click)="addExerciseToRoutine(dat)" class="btn btn-link btn-block">
+                  Agregar a Rutina
+                </a>
+              </div>
+              <div class="card-read-more" *ngIf="!isSelected(dat)" >
+                <a href="javascript:void(0)" (click)="removeExerciseToRoutine(dat)" class="btn btn-link btn-block">
+                  Quitar de Rutina
+                </a>
               </div>
             </div>
-          </ul>
-        </div>
-      </section>
-      <!-- 1st Hero Variation -->
-    </div>
-  </main>
+          </div>
+        </ul>
+      </div> 
+      <div style="text-transform:uppercase; height:5rem; text-align: center; color:rgb(255, 255, 255);">
+        <label for="name">Ingrese el nombre de la rutina: </label> <br>
+        <input type="text"  [(ngModel)]="nameNewRoutine" name="nameNewRoutine" required size="50"><br>
+        <a href="javascript:void(0)" (click)="createRoutine()" class="btn btn-warning mt-4">
+          Crear Rutina
+        </a>
+      </div>
+    </section>
+  </div>
+</main>
