--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -17,6 +17,7 @@
             </span>
           </a>
           <div class="dropdown-menu">
+            <a [routerLink]="['/myRoutine']" class="dropdown-item">Mis Rutinas</a>
             <a [routerLink]="['/routine']" class="dropdown-item">Rutinas</a>
             <a [routerLink]="['/routineGenerated']" class="dropdown-item">Generar mi Rutina</a>
             <a [routerLink]="['/user-profile']" class="dropdown-item">Perfil</a>
