--- a/src/assets/scss/custom/_variables.scss
+++ b/src/assets/scss/custom/_variables.scss
@@ -143,8 +143,8 @@ $shapes-primary-colors: map-merge((
 // Cuadro ejercicios
 $shapes-default-colors: () !default;
 $shapes-default-colors: map-merge((
-  "step-1-gradient-bg":         #1215aca9,
-  "step-2-gradient-bg":         #400094a2,
+  "step-1-gradient-bg":         #4043f7,
+  "step-2-gradient-bg":         #002794,
   "step-3-gradient-bg":         #ff0000a9,
   "span-1-bg":                  #7795f8,
   "span-2-bg":                  #7b9aff,
