--- a/src/app/my-routine/my-routine.component.html
+++ b/src/app/my-routine/my-routine.component.html
@@ -1,55 +1,137 @@
 <main>
-    <div class="position-relative">
-      <!-- shape Hero -->
-      <section class="section section-lg section-shaped pb-250">
-            <div class="shape shape-style-1 shape-primary">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            </div>
-            <div class="col-sm-9">
-            <h2 class="display-3 mb-0"  style="color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
-                Tus rutinas
-            </h2>
-            </div>
-        <ul class="code-editor-options-menu" *ngFor="let rou of routinesUser">
-          <div class="content">
-            <div class="container container rounded">
-              <div class="section section-cp section-shaped">
-                <div class="shape shape-primary container rounded"></div>
-                <p style=" color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
-                  {{rou.nameRoutine}}
-                </p>
-                <div class="row row-grid justify-content-center">
-                  <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
-                    <div class="card text-black bg-dark font-weight-bold mb-2" style="width:17rem; height:15rem;">
-                      <div class="card">
-                        <div class="card-content">
-                          <div class="card-header justify-content-center" style="text-transform:uppercase; height:5rem; text-align: center;">
-                            {{dat.processExercise.nameExercise}}
-                          </div>
-                          <p>
-                            * {{dat.series}} series <br>
-                            * {{dat.repetitions}} repeticiones <br>
-                            * Musculo Principal: {{dat.processExercise.mainMuscle}}<br>
-                            * Descripción: {{dat.processExercise.description}} <br>
-                            * Video: {{dat.processExercise.urlVideo}} <br>
-                          </p>
+  <div class="position-relative">
+    <!-- shape Hero -->
+    <section class="section section-lg section-shaped pb-250">
+      <div class="shape shape-style-1 shape-primary">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        </div>
+        <div class="col-sm-9">
+        <h2 class="display-3 mb-0"  style="color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
+          Tus rutinas
+        </h2>
+      </div>
+      <ul class="code-editor-options-menu" *ngFor="let rou of routinesUser">
+        <div class="content">
+          <div class="container container rounded">
+            <div class="section section-cp section-shaped">
+              <div class="shape shape-primary container rounded"></div>
+              <p style=" color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
+                {{rou.nameRoutine}}
+              </p>
+              <div class="row row-grid justify-content-center">
+                <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
+                  <div class="card text-black bg-dark font-weight-bold mb-2" style="width:17rem; height:15rem;">
+                    <div class="card">
+                      <div class="card-content">
+                        <div class="card-header justify-content-center" style="text-transform:uppercase; height:5rem; text-align: center;">
+                          {{dat.processExercise.nameExercise}}
                         </div>
+                        <p>
+                          * {{dat.series}} series <br>
+                          * {{dat.repetitions}} repeticiones <br>
+                          * Musculo Principal: {{dat.processExercise.mainMuscle}}<br>
+                          * Descripción: {{dat.processExercise.description}} <br>
+                          * Video: {{dat.processExercise.urlVideo}}
+                        </p>
                       </div>
                     </div>
-                  </ul>
+                  </div>
+                  <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="getPermissionToModify(rou)">
+                    <a href="javascript:void(0)" class="btn btn-success mt-4" (click)="modifiedExercise(classic, dat)">
+                      Modificar Ejercicio
+                    </a>
+                  </div>
+                  <ng-template #classic let-c="close" let-d="dismiss">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h6 class="modal-title" id="modal-title-default">
+                          <div style="text-transform:uppercase; font-weight: bold;">
+                          {{dat.processExercise.nameExercise}}
+                          </div>
+                        </h6>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="d('Cross click')">
+                          <span aria-hidden="true">×</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <div>
+                          Series:
+                          <div class="form-group has-success" *ngIf="validationValueSeries()">
+                            <input type="text" [(ngModel)]="seriesExercise" name="seriesExercise" class="form-control" />
+                          </div>
+                          <div class="form-group has-danger" *ngIf="!validationValueSeries()">
+                            <input type="text" placeholder="Ingrese un valor mayor a 0 para las series" [(ngModel)]="seriesExercise" name="seriesExercise" class="form-control is-invalid" />
+                          </div>
+                        </div>
+                        <div>
+                          Repeticiones:
+                          <div class="form-group has-success" *ngIf="validationValueRepetitions()">
+                            <input type="text" [(ngModel)]="repetitionsExercise" name="repetitionsExercise" class="form-control" />
+                          </div>
+                          <div class="form-group has-danger" *ngIf="!validationValueRepetitions()">
+                            <input type="text" placeholder="Ingrese un valor mayor a 0 para las repeticiones" [(ngModel)]="repetitionsExercise" name="repetitionsExercise" class="form-control is-invalid" />
+                          </div>
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" href="javascript:void(0)" (click)="saveChangesExercise(dat); c('Close click')" [disabled]="enabledChangesExercise()">
+                          Guardar Cambios
+                        </button>
+                        <button type="button" class="btn btn-link  ml-auto" data-dismiss="modal" (click)="c('Close click')">Cancelar</button>
+                      </div>
+                    </div>
+                  </ng-template>
+                </ul>
+              </div>
+              <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="getPermissionToModify(rou)">
+                <a href="javascript:void(0)" class="btn btn-primary mt-4" (click)="saveRoutine(rou)">
+                  Guardar todos los cambios
+                </a>
+                <a href="javascript:void(0)" class="btn btn-primary mt-4" (click)="discardChanges(rou)">
+                 Descartar todos los cambios
+                </a>
+              </div>
+              <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="!getPermissionToModify(rou)">
+                <a href="javascript:void(0)" class="btn btn-success mt-4" (click)="enableModification(rou)">
+                  Modificar Ejercicios
+                </a>
+                <!-- Boton borrar rutina 
+                <a href="javascript:void(0)" class="btn btn-warning mt-4" (click)="deleteRoutine(classic2)">
+                  Eliminar Rutina
+                </a>-->
+              </div>
+              <ng-template #classic2 let-c="close" let-d="dismiss">
+                <div class="modal-content bg-gradient-danger">
+                  <div class="modal-header">
+                    <h6 class="modal-title" id="modal-title-notification"></h6>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="d('Cross click')">
+                      <span aria-hidden="true">×</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="py-3 text-center">
+                      <i class="ni ni-bell-55 ni-3x"></i>
+                      <p>Esta seguro que quiere eliminar la rutina: {{rou.nameRoutine}}.</p>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-white" href="javascript:void(0)" (click)="c('Close click'); deleteRoutineSelect(rou)">Eliminar Rutina</button>
+                    <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal" (click)="c('Close click')">Cancelar</button>
+                  </div>
                 </div>
-                </div>
+              </ng-template> 
             </div>
           </div>
-        </ul>
+        </div>
+      </ul>
     </section>
-    </div>
+  </div>
 </main>
