--- a/src/app/routine/routine.component.html
+++ b/src/app/routine/routine.component.html
@@ -102,9 +102,30 @@
               </ul>
             </div>
             <div style="text-transform:uppercase; height:5rem; text-align: center;">
-              <a href="javascript:void(0)" (click)="initRoutine(rou)" class="btn btn-warning mt-4">Iniciar Rutina</a>
+              <a href="javascript:void(0)" (click)="initRoutine(rou, classic2)" class="btn btn-warning mt-4">Iniciar Rutina</a>
             </div>
-            </div>
+            <ng-template #classic2 let-c="close" let-d="dismiss">
+              <div class="modal-content bg-gradient-danger">
+                <div class="modal-header">
+                  <h6 class="modal-title" id="modal-title-notification"></h6>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="d('Cross click')">
+                    <span aria-hidden="true">×</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="py-3 text-center">
+                    <i class="ni ni-like-2 ni-3x"></i>
+                    <h4 class="heading mt-4">Se genero la rutina correctamente!</h4>
+                    <p>Usted a iniciado la rutina: {{rou.nameRoutine}}, puede acceder a ella desde Ver mis rutinas.</p>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-white" href="javascript:void(0)" (click)="c('Close click'); navigateMyRoutine()">Ver mis rutinas</button>
+                  <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal" (click)="c('Close click')">Cerrar</button>
+                </div>
+              </div>
+            </ng-template> 
+          </div>
         </div>
       </div>
     </ul>
