--- a/src/app/routine/routine.component.html
+++ b/src/app/routine/routine.component.html
@@ -115,7 +115,7 @@
                 <div class="modal-body">
                   <div class="py-3 text-center">
                     <i class="ni ni-like-2 ni-3x"></i>
-                    <h4 class="heading mt-4">Se genero la rutina correctamente!</h4>
+                    <h4 class="heading mt-4">Su rutina es genero correctamente!</h4>
                     <p>Usted a iniciado la rutina: {{rou.nameRoutine}}, puede acceder a ella desde Ver mis rutinas.</p>
                   </div>
                 </div>
